// Copyright (c) Mainflux
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package authz;

service AuthZService {
    rpc Authorize(AuthorizeReq) returns (ErrorRes) {}
    rpc AddThings(AddThingsReq) returns (ErrorRes) {}
    rpc AddChannels(AddChannelsReq) returns (ErrorRes) {}
    rpc RemoveThing(RemoveThingReq) returns (ErrorRes) {}
    rpc RemoveChannel(RemoveChannelReq) returns (ErrorRes) {}
}

message AuthorizeReq {
    string sub = 1;
    string obj = 2;
    string act = 3;
}

message AddThingsReq {
    string owner = 1;
    repeated string ids = 2;
}

message AddChannelsReq {
    string owner = 1;
    repeated string ids = 2;
}

message RemoveThingReq {
    string id = 1;
    string owner = 2;
}

message RemoveChannelReq {
    string id = 1;
    string owner = 2;
}

message ErrorRes {
    string err = 1;
}