syntax = "proto3";

package grpc;

service ClientsService {
    rpc CanAccess(AccessReq) returns (Identity) {}
}

message AccessReq {
    string clientKey = 1;
    string chanID = 2;
}

message Identity {
    string value = 1;
}
